[tool.poetry]
name = "tiimaweb"
version = "0.1.0"
description = "Tiima Web Controller"
readme = "README.rst"
authors = ["Tuomas Suutari <tuomas@nepnep.net>"]
license = "MIT"

[tool.poetry.scripts]
tiimaweb = 'tiimaweb.cli:main'

[tool.poetry.dependencies]
python = "^3.6"
mechanicalsoup = "^0.12.0"
pytz = "^2019.3"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
flake8 = "^3.7.9"
flake8-isort = "^2.8.0"
pep8-naming = "^0.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
