[tool.poetry]
name = "tiimaweb"
version = "0.3.2"
description = "Tiima Web Controller"
readme = "README.rst"
authors = ["Tuomas Suutari <tuomas@nepnep.net>"]
license = "MIT"
repository = "https://github.com/suutari/tiimaweb"

[tool.poetry.scripts]
tiimaweb = 'tiimaweb.cli:main'

[tool.poetry.dependencies]
python = "^2.7 || ^3.5"
mechanicalsoup = "^0.12.0"
pytz = ">=2016.0"
typing = { version = "*", python = "<3.5" }

[tool.poetry.dev-dependencies]
mypy = { version = "^0.761", python = "~3.5" }
flake8 = "^3.7.9"
flake8-isort = "^2.8.0"
pep8-naming = "^0.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
